--- a/links.tex
+++ b/links.tex
@@ -15,4 +15,5 @@
 \newcommand{\linkglobusgettasklist}[1]{\href{https://docs.globus.org/api/transfer/task/\#get\_task\_list}{#1}}
 \newcommand{\linkglobusbrowseendpoint}[1]{\href{https://docs.globus.org/api/helper-pages/browse-endpoint}{#1}}
 \newcommand{\linkglobusdirlistingfiltering}[1]{\href{https://docs.globus.org/api/transfer/file\_operations/\#dir\_listing\_filtering}{#1}}
-\newcommand{\linkglobusendpointsearch}[1]{\href{https://docs.globus.org/api/transfer/endpoint\_search}{#1}}
+\newcommand{\linkglobusendpointsearch}[1]{\href{https://docs.globus.org/api/transfer/endpoint\_search/\#endpoint\_search}{#1}}
+\newcommand{\linkglobusgetendpointbyid}[1]{\href{https://docs.globus.org/api/transfer/endpoint/\#get\_endpoint\_by\_id}{#1}}
