--- a/table/movie_table_details.tex
+++ b/table/movie_table_details.tex
@@ -1,13 +1,13 @@
 \begin{tabularx}{\textwidth}{X|l|X|l}
 \toprule
- Column Name       & Property Name   & Pop-up Window             & Valid Offline   \\
+ Column Name   & Property Name   & Pop-up Window             & Valid Offline   \\
 \midrule
- Id                & \texttt{movie\_id}        & Movie \texttt{movie\_id} Details    & True            \\
- Run Date          & \texttt{date\_run}        & n/a                       & True            \\
- Submitted By      & \texttt{user\_name}       & n/a                       & True            \\
- Sample Name       & \texttt{sample\_name}     & n/a                       & True            \\
- Users With Access & \texttt{num\_shares}      & Sharing Of Movie \texttt{movie\_id} & False           \\
- Backup            & \texttt{backup\_device}   & Back Up Movie \texttt{movie\_id}    & True            \\
- Online            & \texttt{is\_online}       & n/a                       & True            \\
+ Id            & \texttt{movie\_id}        & Movie \texttt{movie\_id} Details    & True            \\
+ Run Date      & \texttt{date\_run}        & n/a                       & True            \\
+ Submitted By  & \texttt{user\_name}       & n/a                       & True            \\
+ Sample Name   & \texttt{sample\_name}     & n/a                       & True            \\
+ Shares        & \texttt{num\_shares}      & Sharing Of Movie \texttt{movie\_id} & False           \\
+ Backup        & \texttt{backup\_device}   & Back Up Movie \texttt{movie\_id}    & True            \\
+ Online        & \texttt{is\_online}       & n/a                       & True            \\
 \bottomrule
 \end{tabularx}
