Introduce the assign user feature

--- a/main.tex
+++ b/main.tex
@@ -19,13 +19,13 @@
 %\chapter{Active Transfers page}
 %\input{chapter/active_transfers.tex}
 
-\chapter{Movie Details Pop-up}
+\chapter{Movie Details Pop-up\label{chapter:moviedetails}}
 \input{chapter/movie_details.tex}
 
-\chapter{Sharing Pop-up}
+\chapter{Sharing Pop-up\label{chapter:sharing}}
 \input{chapter/sharing.tex}
 
-\chapter{Backup Pop-up}
+\chapter{Backup Pop-up\label{chapter:backup}}
 \input{chapter/backups.tex}
 
 \chapter{Register Backup Device Pop-up\label{chapter:registerbackupdevice}}
@@ -33,6 +33,9 @@
 
 \chapter{Users}
 \input{chapter/users.tex}
+
+\chapter{Assign User Pop-up}
+\input{chapter/assign_user.tex}
 
 \appendix
 \input{appendices.tex}
