--- a/table/movie_table_details.tex
+++ b/table/movie_table_details.tex
@@ -1,13 +1,13 @@
-\begin{tabularx}{\textwidth}{X|l|X|l}
+\begin{tabular}{lll}
 \toprule
- Column Name   & Property Name   & Pop-up Window                 & Valid Offline   \\
+ Column Name   & Property Name   & Clicking Text Opens Pop-up    \\
 \midrule
- Id            & \texttt{movie\_id}        & Movie \texttt{movie\_id} Details        & True            \\
- Run Date      & \texttt{date\_run}        & n/a                           & True            \\
- Submitted By  & \texttt{user\_name}       & Assign User To Movie \texttt{movie\_id} & True            \\
- Sample Name   & \texttt{sample\_name}     & n/a                           & True            \\
- Shares        & \texttt{num\_shares}      & Sharing Of Movie \texttt{movie\_id}     & False           \\
- Backup        & \texttt{backup\_device}   & Back Up Movie \texttt{movie\_id}        & False           \\
- Online        & \texttt{is\_online}       & n/a                           & True            \\
+ Id            & \texttt{movie\_id}        & Movie \texttt{movie\_id} Details        \\
+ Run Date      & \texttt{date\_run}        & n/a                           \\
+ Submitted By  & \texttt{user\_name}       & Assign User To Movie \texttt{movie\_id} \\
+ Sample Name   & \texttt{sample\_name}     & n/a                           \\
+ Shares        & \texttt{num\_shares}      & Sharing Of Movie \texttt{movie\_id}     \\
+ Backup        & \texttt{backup\_device}   & Back Up Movie \texttt{movie\_id}        \\
+ Online        & \texttt{is\_online}       & n/a                           \\
 \bottomrule
-\end{tabularx}
+\end{tabular}
